--- a/css/features.css
+++ b/css/features.css
@@ -8,9 +8,20 @@
 	margin-top: 5px;
 }
 
+#deal{
+	cursor: pointer;
+	background-color: green;
+	border: 3px solid black;
+	width: 300px;
+	height: 50px;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 5px;
+}
+
 #s1show, #s2show{
 	background-color: grey;
-	cursor: pointer;
 }
 
 #s1stack, #s2stack{
