--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,31 @@ h2, h3{
 	margin-bottom: 5px;
 	margin-top: 10px;
 }
+
+#nav {
+	width: 100%;
+	float: left;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 5px;
+	padding: 0;
+	list-style: none;
+	background-color:  #88bbee;
+	border-bottom: 1px solid black; 
+	border-top: 1px solid black; }
+	
+li {
+	float: left; }
+	
+li a {
+	display: block;
+	padding: 8px 15px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc; }
+	
+li a:hover {
+	color: #c00;
+	background-color: #fff; }
