--- a/css/features.css
+++ b/css/features.css
@@ -8,6 +8,10 @@
 	margin-top: 5px;
 }
 
+#gameBoard{
+	text-align: center;
+}
+	
 #deal{
 	cursor: pointer;
 	background-color: green;
@@ -15,8 +19,8 @@
 	width: 300px;
 	height: 50px;
 	margin-bottom: 5px;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 5px;
 }
 
